k8s/overlays/prod/istio/istio-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
