k8s/overlays/prod/istio/location-istio-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
