k8s/overlays/prod/istio/route-istio-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
