k8s/overlays/prod/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: location
spec:
  hosts:
  - location
  http:
  - route:
    - destination:
        host: location
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route
spec:
  hosts:
  - route
  http:
  - route:
    - destination:
        host: route
